--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,8 @@
 					<div class="form-control">
 						<label for="room">Chat Channel</label>
 						<select name="room" id="room">
+							<option value="room1">room1 </option>
+							<option value="room2">room2 </option>
 							<option value="Business">Business </option>
 							<option value="Technology">Technology</option>
 							<option value="Sport">Sports</option>
