--- a/chat/public/index.html
+++ b/chat/public/index.html
@@ -1,6 +1,7 @@
-<!doctype html>
-<html>
-<head>
+<!-- INSPIRED BY BRAD TRAVERSY CHAT APP -->
+<!DOCTYPE html>
+<html lang="en">
+	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
@@ -11,11 +12,29 @@
 			crossorigin="anonymous"
 		/>
 		<link rel="stylesheet" href="css/style.css" />
-		<title>WebCage Chat App</title>
-</head>
-<body>
+		<title>F5R Chat App</title>
+	</head>
+	<body>
+		<div class="join-container">
+			<header class="join-header">
+				<h1><i class="fas fa-kiwi-bird"></i> F5R Chat </h1>
+			</header>
+			<main class="join-main">
+				<form action="chat.html">
+
+
 					<div class="form-control">
-						<label for="room">Chat Channel</label>
+						<label for="username">اسم المستخدم</label>
+						<input
+							type="text"
+							name="username"
+							id="username"
+							placeholder="Enter username..."
+							required
+						/>
+					</div>
+					<div class="form-control">
+						<label for="room">قناة الدردشة</label>
 						<select name="room" id="room">
 							<option value="room1">room1 </option>
 							<option value="room2">room2 </option>
@@ -26,6 +45,11 @@
 							<option value="cats">Just Cats</option>
 						</select>
 					</div>
-<p>Hello World!</p>
-</body>
+          <div class="flex">
+            <button type="submit" class="btn">تسجيل الدخول إلى الدردشة</button>
+          </div>
+				</form>
+			</main>
+		</div>
+	</body>
 </html>
