--- a/chat/public/lestroom.html
+++ b/chat/public/lestroom.html
@@ -1,7 +1,6 @@
-<!-- INSPIRED BY BRAD TRAVERSY CHAT APP -->
-<!DOCTYPE html>
-<html lang="en">
-	<head>
+<!doctype html>
+<html>
+<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
@@ -12,27 +11,9 @@
 			crossorigin="anonymous"
 		/>
 		<link rel="stylesheet" href="css/style.css" />
-		<title>WebCage Chat App</title>
-	</head>
-	<body>
-		<div class="join-container">
-			<header class="join-header">
-				<h1><i class="fas fa-kiwi-bird"></i> WebCage </h1>
-			</header>
-			<main class="join-main">
-				<form action="chat.html">
-
-
-					<div class="form-control">
-						<label for="username">Username</label>
-						<input
-							type="text"
-							name="username"
-							id="username"
-							placeholder="Enter username..."
-							required
-						/>
-					</div>
+		<title>F5R Chat App</title>
+</head>
+<body>
 					<div class="form-control">
 						<label for="room">Chat Channel</label>
 						<select name="room" id="room">
@@ -45,11 +26,6 @@
 							<option value="cats">Just Cats</option>
 						</select>
 					</div>
-          <div class="flex">
-            <button type="submit" class="btn">Login to Chat</button>
-          </div>
-				</form>
-			</main>
-		</div>
-	</body>
+<p>Hello World!</p>
+</body>
 </html>
