--- a/public/index.html
+++ b/public/index.html
@@ -21,16 +21,7 @@
 			</header>
 			<main class="join-main">
 				<form action="chat.html">
-          <div class="form-control">
-						<label for="email">Email Address</label>
-						<input
-							type="email"
-							name="email"
-							id="email"
-							placeholder="Enter email address..."
-							required
-						/>
-					</div>
+
 
 					<div class="form-control">
 						<label for="username">Username</label>
@@ -45,7 +36,7 @@
 					<div class="form-control">
 						<label for="room">Chat Channel</label>
 						<select name="room" id="room">
-							<option value="Business">Business </option>
+							<option value="عباس">عباس </option>
 							<option value="Technology">Technology</option>
 							<option value="Sport">Sports</option>
 							<option value="news">International News</option>
