--- a/public/chat.html
+++ b/public/chat.html
@@ -11,7 +11,7 @@
   <div class="chat-container">
     <header class="chat-header">
       <h1><i class="fas fa-kiwi-bird"></i> WebCage </h1>
-      <a href="index.php" class="btn" id="leave-btn">Leave Room</a>
+      <a href="index.html" class="btn" id="leave-btn">Leave Room</a>
     </header>
 
     <main class="chat-main">
